syntax = "proto3";
package paginate;

option go_package = "xtek/exchange/__SERVICE_NAME__/pb/paginate";

import "validate/validate.proto";

message PaginateRequest {
  int32 limit = 1 [ (validate.rules).int32 = {gte : 1} ];
  int32 page = 2 [ (validate.rules).int32 = {gte : 1} ];
}
message PaginateResponse {
  int32 limit = 1;
  int32 currentPage = 2;
  int32 totalPages = 3;
  int32 total = 4;
}